--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.10.5"
+    "bootstrap-icons": "^1.11.1"
   }
 }
